--- a/index.html
+++ b/index.html
@@ -1,2 +1,3 @@
 <h1>Hello, world!</h1>
+<p>Some Text</p>
 <a href ="https://salvatoresantamaria.github.io/home/Parallax/index.html">Parallax Demo</a>
