--- a/index.html
+++ b/index.html
@@ -1,3 +1,5 @@
+theme: jekyll-theme-slate
+
 <h1>Hello, world!</h1>
 <p>Some Text</p>
 <a href ="https://salvatoresantamaria.github.io/home/Parallax/index.html">Parallax Demo</a>
