--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
-theme: jekyll-theme-slate
-
+---
+layout:default
+---
 <h1>Hello, world!</h1>
 <p>Some Text</p>
 <a href ="https://salvatoresantamaria.github.io/home/Parallax/index.html">Parallax Demo</a>
