--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout:default
 ---
-<h1>Hello, world!</h1>
+<h1>Hello, world! Please update now :)</h1>
 <p>Some Text</p>
 <a href ="https://salvatoresantamaria.github.io/home/Parallax/index.html">Parallax Demo</a>
