--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 ---
 layout: default
 ---
-<h1>Hello, world! Please update now! :)</h1>
-<p>Some Text</p>
+<h1>Salvatore Santamaria</h1>
+<p>Welcome to my website! This site is a work in progress. In the meantime, here is a [link](https://docs.google.com/document/d/1f905eq3DQyFfDyKmXdKiw9mkFmOYFhZk7K-ju_ZOBoM/edit?usp=sharing) to my resume</p>
+<br>
+<p>Here is a link to a project I've completed recently:</p>
 <a href ="https://salvatoresantamaria.github.io/home/Parallax/index.html">Parallax Demo</a>
