--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 ---
 layout: default
----
+--- 
+change this file to index.html to make it the default homepage
 <h1>Salvatore Santamaria</h1>
 <p>Welcome to my website! This site is a work in progress. In the meantime, here is a <a href="https://docs.google.com/document/d/1f905eq3DQyFfDyKmXdKiw9mkFmOYFhZk7K-ju_ZOBoM/edit?usp=sharing">link</a> to my resume.</p>
 <br>
